--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.20",
     "@datastax/astra-db-ts": "^1.3.0",
+    "@huggingface/inference": "^2.8.0",
     "@mistralai/mistralai": "^0.5.0",
     "ai": "^3.2.16",
     "langchain": "^0.2.8",
