--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ai": "^3.2.16",
     "langchain": "^0.2.8",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "openai": "^4.52.2",
     "react": "^18",
     "react-dom": "^18"
